--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+      box-sizing: border-box;
 }
 
 /* Remove default margin */
@@ -16,38 +16,37 @@ figure,
 blockquote,
 dl,
 dd {
-  margin: 0;
+      margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role='list'],
 ol[role='list'] {
-  list-style: none;
+      list-style: none;
 }
 
 /* Set core root defaults */
 html:focus-within {
-  scroll-behavior: smooth;
+      scroll-behavior: smooth;
 }
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-  font-family: 'Montserrat', sans-serif;
+      min-height: 100vh;
+      text-rendering: optimizeSpeed;
+      line-height: 1.5;
 }
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+      text-decoration-skip-ink: auto;
 }
 
 /* Make images easier to work with */
 img,
 picture {
-  max-width: 100%;
-  display: block;
+      max-width: 100%;
+      display: block;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -55,21 +54,112 @@ input,
 button,
 textarea,
 select {
-  font: inherit;
+      font: inherit;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-   scroll-behavior: auto;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+      html:focus-within {
+            scroll-behavior: auto;
+      }
+
+      *,
+      *::before,
+      *::after {
+            animation-duration: 0.01ms !important;
+            animation-iteration-count: 1 !important;
+            transition-duration: 0.01ms !important;
+            scroll-behavior: auto !important;
+      }
+}
+
+img {
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+}
+
+body {
+      font-family: 'Montserrat', sans-serif;
+      
+      display: grid;
+      grid-template-areas: 
+            "nav-sidebar top-bar top-bar top-bar top-bar"
+            "nav-sidebar main-content main-content main-content main-content"
+            "nav-sidebar main-content main-content main-content main-content"
+            "nav-sidebar main-content main-content main-content main-content"
+            "nav-sidebar main-content main-content main-content main-content";
+}
+
+.nav-sidebar {
+      grid-area: nav-sidebar;
+
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+
+      padding: 1rem 3rem 1rem 1rem;
+
+      background-color: #1992d4;
+      color: whitesmoke;
+}
+
+.logo-container {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+      justify-content: center;
+}
+
+.logo-container i {
+      font-size: 2.5rem;
+}
+
+.logo-container h1 {
+      font-size: 1.5rem;
+}
+
+.nav-main-links-container,
+.nav-secondary-links-container {
+      display: flex;
+      flex-direction: column;
+      gap: 0.2rem;
+}
+
+.link-item {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 1.5rem;
+}
+
+.link-item i {
+      text-align: center;
+      font-size: 1.2rem;
+      width: 1rem;
+      aspect-ratio: 1;
+}
+
+.link-item a {
+      text-decoration: none;
+      color: inherit;
+      font-size: 1.2rem;
+      font-weight: 600;
+}
+
+
+.top-bar {
+      grid-area: top-bar;
+}
+
+.user-projects {
+      grid-area: user-projects;
+}
+
+.announcements {
+      grid-area: announcements;
+}
+
+.trending {
+      grid-area: trending;
 }
